--- a/thang.html
+++ b/thang.html
@@ -132,7 +132,7 @@
         <div class="col">
  	
 	 	<div class="card-body">
-    		<img src="/img/thang/thang.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="180%" height="225">
+    		<img src="img/thang/thang.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="180%" height="225">
     			<div class="mask flex-center rgba-white-strong ">
 
 	  	</div>
@@ -152,7 +152,7 @@
         </div>
         <div class="col">
 	<div class="card-body">
-            <img src="/img/thang/download.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
+            <img src="img/thang/download.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
 		<div class="mask flex-center rgba-white-strong">
 
 		</div>
@@ -171,7 +171,7 @@
         </div>
         <div class="col">
 	<div class="card-body">
-            <img src="/img/thang/4.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
+            <img src="img/thang/4.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
 		<div class="mask flex-center rgba-white-strong">
 
 		</div>
@@ -190,7 +190,7 @@
         </div>
          <div class="col">
   <div class="card-body">
-            <img src="/img/thang/8.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
+            <img src="img/thang/8.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
     <div class="mask flex-center rgba-white-strong">
 
     </div>
@@ -210,7 +210,7 @@
 
 <div class="col">
   <div class="card-body">
-            <img src="/img/thang/10.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
+            <img src="img/thang/10.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
     <div class="mask flex-center rgba-white-strong">
 
     </div>
@@ -229,7 +229,7 @@
         </div>
 <div class="col">
   <div class="card-body">
-            <img src="/img/thang/6.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
+            <img src="img/thang/6.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
     <div class="mask flex-center rgba-white-strong">
 
     </div>
