add bg-img for main page

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body style="background-image: url('img/duy/TLOU.png');">
     <!--This is the navigation Bar-->
-    <div class="container">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">TeamLoen</a>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
+            <a class="navbar-brand" href="#">
+                <b class="text-light">TeamLoen</b>
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -26,23 +28,33 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home Page </a>
+                    <a class="nav-link" href="index.html">
+                        <b class="text-light">Home Page</b>     
+                    </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="duy.html">Duy</a>
+                    <a class="nav-link" href="duy.html">
+                        <b class="text-light">Duy</b>    
+                    </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="thang.html">Thắng</a>
+                    <a class="nav-link" href="thang.html">
+                        <b class="text-light">Thắng</b>
+                    </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="giau.html">Giầu</a>
+                    <a class="nav-link" href="giau.html">
+                        <b class="text-light">Giầu</b>
+                    </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="minh.html">Minh</a>
+                    <a class="nav-link" href="minh.html">
+                        <b class="text-light">Minh</b>
+                    </a>
                 </li>
 
               </ul>
@@ -50,6 +62,12 @@
             </div>
           </nav>
     </div>
+
+    <section class="container mt-5">
+        <h3 class="text text-center"> <b class="text-light">This is the main page</b></h3>
+        
+    </section>
+
     
 </body>
 </html>
