--- a/giau.html
+++ b/giau.html
@@ -163,7 +163,7 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <img src="90.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
+            <img src="img/giau/90.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
 		      <div class="mask flex-center rgba-blue-strong ">	
         	   <p class="white-text">Tết 2021</p>
 	         </div>
@@ -184,7 +184,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img src="15.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
+            <img src="img/giau/15.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
           <div class="mask flex-center rgba-blue-strong ">
             <p class="white-text">| 28.02.2021 |</p>
             </div>
@@ -204,7 +204,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img src="19.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
+            <img src="img/giau/19.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
             <div class="mask flex-center rgba-blue-strong">
               <p class="white-text">| 28.02.2021 |</p>
             </div>
@@ -224,7 +224,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img src="13.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
+            <img src="img/giau/13.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
               <div class="mask flex-center rgba-red-strong">
                <p class="white-text">|21.03.2021|</p>
               </div>
@@ -246,7 +246,7 @@
 
         <div class="col">
           <div class="card shadow-sm">
-            <img src="14.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
+            <img src="img/giau/14.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
             <div class="mask flex-center rgba-red-strong">
               <p class="white-text">|21.03.2021|</p>
             </div>
@@ -269,7 +269,7 @@
         <div class="col">
           <div class="card shadow-sm">
 
-            <img src="18.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
+            <img src="img/giau/18.jpg" class="bd-placeholder-img card-img-top" alt="smaple image" width="100%" height="225">
             <div class="mask flex-center rgba-red-strong">
               <p class="white-text">|21.03.2021|</p>
             </div>
