--- a/giau.html
+++ b/giau.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home Page </a>
+                    <a class="nav-link" href="index.html">Home Page </a>
                 </li>
 
                 <li class="nav-item">
