--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
                     </a>
                 </li>
 
+                <li class="nav-item">
+                    <a class="nav-link" href="quy.html">
+                        <b class="text-light">Quý</b>
+                    </a>
+                </li>
+
               </ul>
               
             </div>
