--- a/thang.html
+++ b/thang.html
@@ -45,6 +45,10 @@
                     <a class="nav-link" href="minh.html">Minh</a>
                 </li>
 
+                <li class="nav-item">
+                  <a class="nav-link" href="quy.html">Quý</a>
+                </li>
+
               </ul>
               
             </div>
